# Fortify

./: .gitignore  .gitmodules  CMakeLists.txt  Fortify.sln  Fortify.vcxproj  Fortify.vcxproj.filters  README.md  camera.h  commandBuffer.cpp  commandBuffer.h  core.cpp  core.h  debugStart.bat  descriptorSets.cpp  descriptorSets.h  device.cpp  device.h  frameBuffer.cpp  frameBuffer.h  imageView.cpp  imageView.h  imgui.ini  instance.cpp  instance.h  log.txt  main.cpp  pipeline.cpp  pipeline.h  releaseStart.bat  renderPass.cpp  renderPass.h  sampler.cpp  sampler.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utility.cpp  utility.h
.github/workflows/: cmake-multi-platform.yml
App/: main.cpp
Engine/Core/Headers/: camera.h  core.h  rtSceneManager.h  sceneManager.h
Engine/Core/Source/: core.cpp  rtSceneManager.cpp  sceneManager.cpp
Engine/Graphics/Headers/: animation.h  commandBuffer.h  descriptorSets.h  device.h  frameBuffer.h  instance.h  material.h  pipeline.h  raytracing.h  renderPass.h  sampler.h  swapchain.h  texture.h
Engine/Graphics/Source/: animation.cpp  commandBuffer.cpp  descriptorSets.cpp  device.cpp  frameBuffer.cpp  instance.cpp  pipeline.cpp  raytracing.cpp  renderPass.cpp  sampler.cpp  swapchain.cpp  texture.cpp
Engine/Utility/: ResourceManager.h  fortifyConsole.h  sceneUtility.h  utility.cpp  utility.h  vec.h  vulkanPointers.cpp  vulkanPointers.hpp
cmake/: Shaders.cmake
shaders/: compileShader.bat  compileSkyboxShader.bat  compileTextureMapShader.bat  light.frag  light.vert  primitive.frag  primitive.vert  raycommon.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace.rmiss  shader.frag  skyboxFrag.frag  skyboxVert.vert  textureMapFrag.frag  textureMapFrag.spv  textureMapVert.vert
shaders/spv/: lightVert.spv  primitiveFrag.spv  primitiveVert.spv  raytraceAhit.spv  raytraceChit.spv  raytraceInt.spv  raytraceMiss.spv  raytraceRaygen.spv  skyboxFrag.spv  skyboxVert.spv  textureMapFrag.spv  textureMapVert.spv
